# my-os

./: .gitignore  CMakeLists.txt  TODO  readme.md
arch/i386/pc/: linker.ld
arch/i386/pc/boot/: boot.asm
arch/i386/pc/bus/: pci.c
arch/i386/pc/crt/: crti.asm  crtn.asm
arch/i386/pc/dev/: timer.c
arch/i386/pc/dev/i8042/: _i8042.h  i8042.c
arch/i386/pc/dev/ide/: ata.c
arch/i386/pc/int/: control.asm  handlers.asm  idt.h  interrupts.c  pic.c  pic.h
arch/i386/pc/mm/: mm.c
arch/i386/pc/mm/gdt/: gdt.c  gdt.h  gdt_packing.c  gdt_segments.h  load_gdt.asm  tss.c  tss.h
arch/i386/pc/mm/paging/: paging.asm  paging.c  paging.h
arch/i386/pc/scheduling/: lock.asm  pc_task.h  tasks.asm  tasks.c
arch/i386/pc/tty/: tty.c  vga.h
arch/i386/pc/util/: port_io.asm  port_io.h
docs/: memory-managment.md  source-tree.md
include/kernel/: config.h  kprintf.h  mm.h  multiboot.h  panic.h  tty.h
include/kernel/arch/: ide.h  lock.h  pci.h  tasks.h  tty.h
include/kernel/bus/: pci.h
include/kernel/dev/: i8042.h  ps2_kbd.h  timer.h
include/kernel/dev/block/: ata.h
include/kernel/int/: interrupts.h
include/kernel/lib/: malloc.h  string.h
include/kernel/mm/: mm.h  paging.h
include/kernel/scheduling/: lock.h  tasks.h
kernel/: kprintf.c  main.c  panic.c
kernel/bus/: pci.c  pci.h
kernel/dev/: ps2_kbd.c  timer.c
kernel/dev/block/: _ata.h  ata.c
kernel/int/: interrupts.c
kernel/lib/malloc/: allocator.c
kernel/lib/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
kernel/mm/: mm.c  paging.c
kernel/scheduling/: lock.c  tasks.c
kernel/tty/: tty.c
tools/: run-qemu.sh
